--- a/.github/workflows/start_runners.yml
+++ b/.github/workflows/start_runners.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     # The type of runner that the job will run on
     runs-on: [self-hosted]
 
@@ -26,4 +26,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: deploy
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN}}
         run: bash scripts/all_up.sh
