--- a/.github/workflows/start_runners.yml
+++ b/.github/workflows/start_runners.yml
@@ -13,9 +13,6 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-permissions:
-  workflows: write
-  repository-projects: write
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -33,5 +30,5 @@ jobs:
 
       - name: deploy
         env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.REPO_TOKEN }}
         run: bash scripts/all_up.sh
