--- a/composes/pokegen-docker-compose.yml
+++ b/composes/pokegen-docker-compose.yml
@@ -6,5 +6,6 @@ services:
         - RUNNER_IDLE_TIMEOUT=0
         - RUNNER_LABELS=cml,gpu
         - RUNNER_REPO=https://github.com/Benjamin-Etheredge/pokegen
+        - repo_token=${REPO_TOKEN}
     shm_size: '24gb' # This fixes an issue with pytorch dataloaders
     runtime: nvidia
